[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/thrishaStuff/images/poster.png" type="Texture" id=1]
[ext_resource path="res://Scenes/mimistuff/alistair_animations/character.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/thrishaStuff/Scripts/Poster.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Scenes/thrishaStuff/Scripts/Jock.gd" type="Script" id=5]
[ext_resource path="res://Scenes/thrishaStuff/images/cheerleader.png" type="Texture" id=6]
[ext_resource path="res://Scenes/thrishaStuff/Scripts/Janitor.gd" type="Script" id=7]
[ext_resource path="res://Scenes/leoStuff/HUD/HUD.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/thrishaStuff/Audio/Hallway/Kevin MacLeodï¼š Aces High.wav" type="AudioStream" id=9]
[ext_resource path="res://Scenes/thrishaStuff/Scripts/Hallway.gd" type="Script" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 162.077

[sub_resource type="CircleShape2D" id=2]
radius = 162.077

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 546.5 )

[node name="Hallway" type="Node2D"]
script = ExtResource( 10 )

[node name="Poster" type="Area2D" parent="."]
position = Vector2( 1374, 851 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Poster"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Poster"]
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 1 )

[node name="QuestionMark" type="Sprite" parent="Poster"]
position = Vector2( 0, -135 )
texture = ExtResource( 4 )

[node name="Jock" type="Area2D" parent="."]
position = Vector2( 254, 838 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jock"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Jock"]
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 6 )

[node name="QuestionMark" type="Sprite" parent="Jock"]
position = Vector2( 0, -135 )
texture = ExtResource( 4 )

[node name="Janitor" type="Area2D" parent="."]
position = Vector2( 644, 831 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Janitor"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Janitor"]
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 6 )

[node name="QuestionMark" type="Sprite" parent="Janitor"]
position = Vector2( 0, -135 )
texture = ExtResource( 4 )

[node name="player" parent="." instance=ExtResource( 2 )]
pause_mode = 2
position = Vector2( 1056, 715 )

[node name="HUD" parent="player" instance=ExtResource( 8 )]
position = Vector2( -178, -121 )
limit_left = 0
limit_top = 0
limit_right = 2225
limit_bottom = 0

[node name="rightBoundary" type="StaticBody2D" parent="."]
position = Vector2( 1944, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightBoundary"]
position = Vector2( 327, 533 )
shape = SubResource( 3 )

[node name="leftBoundary" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftBoundary"]
position = Vector2( -4, 532.5 )
shape = SubResource( 3 )

[node name="HallwayAudio" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
position = Vector2( 980, 566 )
stream = ExtResource( 9 )

[connection signal="body_entered" from="Poster" to="Poster" method="_on_Poster_body_entered"]
[connection signal="body_exited" from="Poster" to="Poster" method="_on_Poster_body_exited"]
[connection signal="body_entered" from="Jock" to="Jock" method="_on_Cheerleader_body_entered"]
[connection signal="body_exited" from="Jock" to="Jock" method="_on_Cheerleader_body_exited"]
[connection signal="body_entered" from="Janitor" to="Janitor" method="_on_Janitor_body_entered"]
[connection signal="body_exited" from="Janitor" to="Janitor" method="_on_Janitor_body_exited"]
